--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "32.shop",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3100",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -18,10 +19,12 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "swiper": "^7.4.1"
+    "swiper": "^7.4.1",
+    "url-loader": "^4.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
+    "serve": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
