--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "32.shop",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3100",
+  "proxy": "http://127.0.0.1:3100",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
