--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.12",
+    "react-query": "3.33.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
