--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "sass": "^1.49.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^7.4.1",
     "url-loader": "^4.1.1"
   },
