--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
+    "http-proxy-middleware": "^2.0.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,6 +26,7 @@
     "react-slick": "^0.28.1",
     "sass": "^1.49.0",
     "slick-carousel": "^1.8.1",
+    "socket.io": "^4.4.1",
     "swiper": "^7.4.1",
     "url-loader": "^4.1.1"
   },
