--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "dotenv-webpack": "^7.1.0",
     "http-proxy-middleware": "^2.0.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
